--- a/HowItWorks/howitwork2.html
+++ b/HowItWorks/howitwork2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oura - Explore How We Can Help</title>
     <style>
+      /* reset styles */
       * {
         margin: 0;
         padding: 0;
