--- a/ForBusiness/ForBusiness.html
+++ b/ForBusiness/ForBusiness.html
@@ -15,7 +15,7 @@
       <header id="header" class="site-header"></header>
 
     <!-- Hero Section -->
-    <section id="home" class="hero" ">
+    <section id="home" class="hero" class="section1 light-navbar-section">
       <div class=" hero-overlay">
         <video src="/assets/vid/gen4-hero-desktop-tony-2.mp4" autoplay muted loop></video>
         </div>
@@ -34,7 +34,7 @@
 
 
     <!-- Invest Section -->
-    <section class="invest-section">
+    <section class="invest-section" class="section1 light-navbar-section">
         <div class="container">
             <h2>Invest in the health of your organization</h2>
             <p>
@@ -47,7 +47,7 @@
     </section>
 
     <!-- Products Section -->
-    <section id="products" class="products">
+    <section id="products" class="products" class="section1 light-navbar-section">
         <div class="container">
             <!-- Oura Ring and App -->
             <div class="product-card">
@@ -61,7 +61,7 @@
                     </p>
                 </div>
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                    <img src="../assets/img/product.png"
                         alt="Oura Ring and App" />
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     </p>
                 </div>
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                    <img src="../assets/img/ouraapi.png"
                         alt="API Integration" />
                 </div>
             </div>
@@ -102,7 +102,7 @@
 
     <!-- Bring to Work Section -->
 
-    <section class="bring-to-work">
+    <section class="bring-to-work" class="section1 light-navbar-section">
         <div class="container">
             <h2>Bring Oura to Work</h2>
             <p class="section-subtitle">Bring the benefit of Oura to your team</p>
@@ -142,7 +142,7 @@
 
 
     <!-- Statistics Section -->
-    <section class="statistics">
+    <section class="statistics" class="section1 light-navbar-section">
         <div class="container">
             <div class="stats-content">
                 <div class="stats-text">
@@ -179,11 +179,11 @@
     <br />
     <hr />
     <!-- Industries Section -->
-    <section class="industries">
+    <section class="industries" class="section1 light-navbar-section">
         <div class="container">
             <div class="industries-grid">
                 <div class="industry-item">
-                    <img src="/assets/img/Screenshot 2025-08-09 223844.png" alt="Industries" />
+                    <img src="/assets/img/nutra4.png" alt="Industries" />
                     <div class="industry-card">
                         <h2>Athletics</h2>
                         <p>
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="industry-item">
-                    <img src="/assets/img/Screenshot 2025-08-09 223849.png" alt="Industries" />
+                    <img src="../assets/img/strava.png" alt="Industries" />
                     <div class="industry-card">
                         <h2>Business Sales</h2>
                         <p>
@@ -207,7 +207,7 @@
                 </div>
 
                 <div class="industry-item">
-                    <img src="/assets/img/Screenshot 2025-08-10 095041.png" alt="Industries" />
+                    <img src="../assets/img/university.png" alt="Industries" />
                     <div class="industry-card">
                         <h2>Government</h2>
                         <p>
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="industry-item">
-                    <img src="/assets/img/Screenshot 2025-08-09 223840.png" alt="Industries" />
+                    <img src="../assets/img/nascar.png" alt="Industries" />
                     <div class="industry-card">
                         <h2>Health Care</h2>
                         <p>
@@ -236,14 +236,14 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="final-cta">
+    <section class="final-cta" class="section1 light-navbar-section">
         <div class="container">
             <div class="cta-content">
                 <h2>Improve your organizational health with Oura</h2>
                 <button class="cta-button primary large">GET STARTED TODAY</button>
             </div>
             <div class="cta-image">
-                <video src="/assets/vid/backgroundtwobuttoninintegration.mp4 " autoplay muted loop width="auto"
+                <video src="../assets/vid/how_it_works_12pm.mp4" autoplay muted loop width="auto"
                     height="500px"></video>
             </div>
         </div>
