--- a/HowItWorks/HowItWorks.html
+++ b/HowItWorks/HowItWorks.html
@@ -4,31 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How does Oura Ring work: Smart Ring Health Tracking</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
-    <link rel="stylesheet" href="../components//header/header.css">
-    <link rel="stylesheet" href="../shared/fonts.css">    
-    <link rel="stylesheet" href="/HowItWorks/howitworks.css" >
+    <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png" />
+    <link rel="stylesheet" href="../components/header/header.css" />
+    <link rel="stylesheet" href="../shared/fonts.css" />
+    <link rel="stylesheet" href="/HowItWorks/howitworks.css" />
   </head>
-<body>
+  <body>
     <header id="header" class="site-header"></header>
 
-    <div id="html2-container"></div>
-    <!-- HTML2 website is an extension for effect first section  -->
-
     <!-- Hero Section -->
-    <section class="hero-section" >
-      <div class="overlay" > </div>
-        <video src="/assets/vid/hero_bg_d.mp4" loop autoplay muted ></video>
-      <div class="hero-content"  >          
-        
+    <section class="hero-section section1 light-navbar-section">
+      <div class="hero-overlay"></div>
+      <video src="../assets/vid/hero_bg_d.mp4" loop autoplay muted></video>
+      <div class="hero-content">
         <h1 class="hero-title">How It Works</h1>
         <h2 class="hero-subtitle">Spend a day with Oura</h2>
-        <p class="hero-description" >
+        <p class="hero-description">
           That smart ring on your finger? It's continually collecting data on
           over 20 biometrics that directly impact your wellbeing, day and night.
         </p>
       </div>
-
       <div class="scroll-indicator">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
           <path d="M7 14l5 5 5-5z" />
@@ -36,9 +31,10 @@
       </div>
     </section>
 
-    <!-- Traditional Scrolling Sections -->
     <!-- Wake Up Section -->
-    <section class="traditional-section section-dark">
+    <section
+      class="traditional-section section-dark section1 light-navbar-section"
+    >
       <div class="section-container">
         <div class="section-content">
           <h2 class="section-title">Wake up rested</h2>
@@ -55,22 +51,24 @@
           </ul>
         </div>
         <div class="section-visual">
-          <img src="\assets\img\heart_rate_variability_en.png" alt="line chart Variability"  />
-              </div>
-            </div>
-          </div>
+          <img
+            src="../assets/img/heart_rate_variability_en.png"
+            alt="line chart Variability"
+          />
         </div>
       </div>
     </section>
 
     <!-- Activity Section -->
-    <section class="traditional-section section-gradient">
+    <section
+      class="traditional-section section-gradient section1 light-navbar-section"
+    >
       <div class="section-container">
         <div class="section-visual">
-          <div class="visual-element">
-            <img src="\assets\img\bedtime_guidance_en.png" alt="piechart Variability"  />                
-            </div>
-          </div>
+          <img
+            src="../assets/img/bedtime_guidance_en.png"
+            alt="piechart Variability"
+          />
         </div>
         <div class="section-content">
           <h2 class="section-title">Ready, set, get going</h2>
@@ -90,7 +88,9 @@
     </section>
 
     <!-- Balance Section -->
-    <section class="traditional-section section-purple">
+    <section
+      class="traditional-section section-purple section1 light-navbar-section"
+    >
       <div class="section-container">
         <div class="section-content">
           <h2 class="section-title">Find balance in your day</h2>
@@ -106,14 +106,16 @@
           </ul>
         </div>
         <div class="section-visual">
-          <div class="visual-element">
-            <img  src="\assets\img\daytime_stress_en_1.png" alt="graph1 Variability"  />
+          <img
+            src="../assets/img/daytime_stress_en_1.png"
+            alt="graph1 Variability"
+          />
         </div>
       </div>
     </section>
 
     <!-- Transition Section -->
-    <section class="transition-section">
+    <section class="transition-section section1 light-navbar-section">
       <div class="transition-content">
         <h2 class="transition-title">Experience the Journey</h2>
         <p class="transition-subtitle">
@@ -123,145 +125,14 @@
       </div>
     </section>
 
-
-
-
-    <!-- Interactive Showcase Section -->
-    <div class="showcase-wrapper">
-      <div class="main-content">
-        <!-- Rest Section -->
-        <section class="content-section section-blue" data-index="0">
-          <div class="section-container">
-            <div class="section-visual">
-              <img src="\assets\img\pop_charger_set@3x_2.jpg" alt="Heart Rate Variability"  /> 
-              </div>
-            </div>
-            <div class="section-content">
-              <h2 class="section-title">Take a breather</h2>
-              <p class="section-description">
-                Oura helps you find and embrace restorative moments throughout
-                your day.
-              </p>
-              <ul class="section-features">
-                <li>Restorative moments</li>
-                <li>Recovery tracking</li>
-                <li>Breathing exercises</li>
-                <li>Wellness guidance</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-
-        <!-- Sleep Section -->
-        <section class="content-section section-green" data-index="1">
-          <div class="section-container">
-            <div class="section-content">
-              <h2 class="section-title">Wind down</h2>
-              <p class="section-description">
-                When you go to sleep, Oura goes to work — translating your sleep
-                data to define your optimal sleep schedule and spot areas for
-                improvement.
-              </p>
-              <ul class="section-features">
-                <li>Sleep schedule optimization</li>
-                <li>Sleep pattern analysis</li>
-                <li>Improvement recommendations</li>
-                <li>Circadian rhythm tracking</li>
-              </ul>
-            </div>
-            <div class="section-visual">
-              <div class="visual-element">
-               <img src="\assets\img\resilience_en.png" alt="sleep Variability"  />
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <!-- Morning Section -->
-        <section class="content-section section-dark" data-index="2">
-          <div class="section-container">
-            <img src="\assets\img\partner_integrations_en.png" alt="morning Variability"  /> 
-            <div class="section-content">
-              <h2 class="section-title">Rise and shine</h2>
-              <p class="section-description">
-                Start your morning with personalized insights. Your Oura ring
-                has been working all night to give you the perfect wake-up call
-                with your readiness score.
-              </p>
-              <ul class="section-features">
-                <li>Morning readiness insights</li>
-                <li>Sleep quality summary</li>
-                <li>Energy level predictions</li>
-                <li>Daily recommendations</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-
-        <!-- Afternoon Section -->
-        <section class="content-section section-gradient" data-index="3">
-          <div class="section-container">
-            <div class="section-content">
-              <h2 class="section-title">Power through your day</h2>
-              <p class="section-description">
-                Whether you're crushing a workout or managing a busy schedule,
-                Oura tracks every heartbeat and movement to optimize your
-                performance.
-              </p>
-              <ul class="section-features">
-                <li>Real-time activity tracking</li>
-                <li>Heart rate monitoring</li>
-                <li>Stress level detection</li>
-                <li>Performance optimization</li>
-              </ul> 
-            </div>
-            <div class="section-visual">
-              <div class="visual-element">
-                <img src="\assets\img\lifestyle_photo_grid_2_4.jpg" alt="afternoon Variability"  />
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- Evening Section -->
-        <section class="content-section section-purple" data-index="4">
-          <div class="section-container">
-            <div class="section-visual">
-              <img src="\assets\img\BKG_blur_VSH5YX.png" alt="evening  Variability"  />
-              </div>
-            </div>
-            <div class="section-content">
-              <h2 class="section-title">Evening reflection</h2>
-              <p class="section-description">
-                As your day winds down, Oura helps you reflect on your
-                achievements and prepares your body for optimal recovery.
-              </p>
-              <ul class="section-features">
-                <li>Daily summary insights</li>
-                <li>Recovery preparation</li>
-                <li>Sleep readiness score</li>
-                <li>Tomorrow's planning</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-      </div>
-
-      <!-- Progress Indicator -->
-      <div class="progress-indicator">
-        <div class="progress-dot active" onclick="showSection(0)"></div>
-        <div class="progress-dot" onclick="showSection(1)"></div>
-        <div class="progress-dot" onclick="showSection(2)"></div>
-        <div class="progress-dot" onclick="showSection(3)"></div>
-        <div class="progress-dot" onclick="showSection(4)"></div>
-      </div>
-    </div>
-
-
-
     <!-- Membership Section -->
-    <section class="membership-section">
-      <video src="\assets\vid\how_it_works_3pm.mp4" autoplay muted loop></video>
-
+    <section class="membership-section section1 light-navbar-section">
+      <video
+        src="../assets/vid/how_it_works_3pm.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
       <div class="membership-container">
         <h2 class="membership-title">Become a member</h2>
         <p class="membership-description">
@@ -272,74 +143,47 @@
       </div>
     </section>
 
+    <!-- Cookie Overlay -->
+    <div class="overlay" id="overlay"></div>
+    <div class="cookie-popup" id="cookiePopup">
+      <h3>We Use Cookies</h3>
+      <p>
+        We use cookies to enhance your experience on our website. By clicking
+        "Accept All", you agree to our use of cookies. Choose "Necessary Only"
+        if you prefer to only allow essential cookies.
+      </p>
+      <div class="cookie-buttons">
+        <button class="cookie-btn necessary-only" id="necessaryBtn">
+          Necessary Only
+        </button>
+        <button class="cookie-btn accept-all" id="acceptAllBtn">
+          Accept All
+        </button>
+      </div>
+    </div>
+
     <footer></footer>
 
-    <script src="howitworks.js">
-      
-    </script>
-
+    <script src="howitworks.js"></script>
     <script>
-       fetch('../components/header/header.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('header').innerHTML = data;
-
-        const script = document.createElement('script');
-        script.src = '../components//header/header.js';
-        document.body.appendChild(script);
-      });
-      //load continuous webpage contetn
-      fetch("howitwork2.html")
-        .then((res) => {
-          if (!res.ok) {
-            // 404 condition
-            throw new Error(`HTTP error: ${res.status}`);
-          }
-          return res.text();
-        })
-        .then((html) => {
-          const container = document.getElementById("html2-container");
-          container.innerHTML = html;
-
-          // second html page 
-          container.querySelectorAll("script").forEach((oldScript) => {
-            const newScript = document.createElement("script");
-            if (oldScript.src) {
-              newScript.src = oldScript.src;
-            } else {
-              newScript.textContent = oldScript.textContent;
-            }
-            document.body.appendChild(newScript);
-          });
-        })
-        .catch((err) => {
-          console.error("load HTML2 fail:", err);
-          alert("load fail: " + err.message);
+      fetch("../components/header/header.html")
+        .then((res) => res.text())
+        .then((data) => {
+          document.getElementById("header").innerHTML = data;
+          const script = document.createElement("script");
+          script.src = "../components/header/header.js";
+          document.body.appendChild(script);
         });
 
-      //loadfile
-      //dynamic load footer to all page if this code
       fetch("/components/footer/footer.html")
         .then((res) => res.text())
         .then((data) => {
           document.querySelector("footer").innerHTML = data;
-          document.getElementsByTagName("footer")[0].innerHTML = data;
-
           const script = document.createElement("script");
           script.src = "/components/footer/footer.js";
           document.body.appendChild(script);
         });
 
-      const link = document.createElement("link");
-      link.rel = "stylesheet";
-      link.href = "/components/footer/footer.css";
-      document.head.appendChild(link);
-
-      const link2 = document.createElement("link");
-      link2.rel = "stylesheet";
-      link2.href = "/shared/style.css";
-      document.head.appendChild(link2);
-      //or
       ["/components/footer/footer.css", "/shared/style.css"].forEach((href) => {
         const link = document.createElement("link");
         link.rel = "stylesheet";
@@ -349,17 +193,3 @@
     </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
