--- a/WhyOura2/ScienceAndResearch.html
+++ b/WhyOura2/ScienceAndResearch.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oura Ring: Science-Based Research for Human Health</title>
-  <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="../assets/images/icon-32x32.png">
   <link rel="stylesheet" href="../components//header/header.css">
   <link rel="stylesheet" href="../components/footer/footer.css">
   <link rel="stylesheet" href="../shared/fonts.css">
@@ -73,7 +73,7 @@
       </div>
     </section>
     <section class="section4">
-      <div class="section4-content">
+      <div class="section4-content light-navbar-section">
         <div class="section4-card">
           <div class="section4-text">
             <div class="section4-title">
@@ -92,7 +92,7 @@
               </ul>
             </div>
             <div class="button-row">
-              <button>Learn More</button>
+              <button id="learnMore">Learn More</button>
             </div>
           </div>
 
@@ -110,8 +110,8 @@
 
         <div class="main-studies">
             <div class="study-card">
-                <div class="card-image">
-                    <img src="/assets/images/ucsf-health.jpg" alt="UC San Francisco">
+                <div class="card-image light-navbar-section">
+                    <img src="../assets/images/ucsf-health.jpg" alt="UC San Francisco">
                 </div>
                 <div class="card-content">
                     <h3 class="university-name">University of California, San Francisco</h3>
@@ -123,7 +123,7 @@
             </div>
             <div class="study-card">
                 <div class="card-image">
-                    <img src="/assets/images/nus-or4.jpg" alt="NUS">
+                    <img src="../assets/images/nus-or4.jpg" alt="NUS">
                 </div>
                 <div class="card-content">
                     <h3 class="university-name">National University of Singapore</h3>
@@ -135,7 +135,7 @@
             </div>
             <div class="study-card">
                 <div class="card-image">
-                    <img src="/assets/images/uc-san-diego-or4.jpg" alt="UC San Diego">
+                    <img src="../assets/images/uc-san-diego-or4.jpg" alt="UC San Diego">
                 </div>
                 <div class="card-content">
                     <h3 class="university-name">University of California San Diego</h3>
