--- a/ForBusiness/ForBusiness.html
+++ b/ForBusiness/ForBusiness.html
@@ -6,8 +6,7 @@
     <title>Oura Ring for Business: Employee Wellness & Productivity</title>
     <link rel="stylesheet" href="business.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
-  <link rel="stylesheet" href="../components/header/header.css">
-  <link rel="stylesheet" href="../shared/fonts.css">
+    <link rel="stylesheet" href="../components/header/header.css">
 </head>
 <body>
 
@@ -77,7 +76,7 @@
                     </p>
                 </div>
                 <div class="product-image">
-                    <img src="/assets/img/business-meeting.png" alt="Team meeting with wearables" />
+                    <img src="../assets/img/business-meeting.png" alt="Team meeting with wearables" />
                 </div>
             </div>
 
@@ -169,7 +168,7 @@
                     </div>
                 </div>
                 <div class="stats-image">
-                    <img src="/assets/img/hand-holding-bag.jpg" alt="Team wearing smart rings" height="600px" />
+                    <img src="../assets/img/hand-holding-bag.jpg" alt="Team wearing smart rings" height="600px" />
                 </div>
             </div>
         </div>
@@ -183,7 +182,7 @@
         <div class="container">
             <div class="industries-grid">
                 <div class="industry-item">
-                    <img src="/assets/img/nutra4.png" alt="Industries" />
+                    <img src="../assets/img/nutra4.png" alt="Industries" />
                     <div class="industry-card">
                         <h2>Athletics</h2>
                         <p>
@@ -411,10 +410,6 @@
     </div>
 
 
-
-
-
-
     <!-- Footer -->
     <footer id="footer"></footer>
 
@@ -427,33 +422,22 @@
         document.getElementById('header').innerHTML = data;
 
         const script = document.createElement('script');
-        script.src = '../components//header/header.js';
+        script.src = '../components/header/header.js';
         document.body.appendChild(script);
       });
-      //dynamic load footer to all page if this code
-      fetch("/components/footer/footer.html")
+      //dynamic load footer to  page
+      fetch("../components/footer/footer.html")
         .then((res) => res.text())
         .then((data) => {
           document.getElementById("footer").innerHTML = data; 
           // footer then added footer.js
           const script = document.createElement("script");
-          script.src = "/components/footer/footer.js";
+          script.src = "../components/footer/footer.js";
           document.body.appendChild(script);
         });
 
-      // add footer.css if not added in <link header>
-      const link = document.createElement("link");
-      link.rel = "stylesheet";
-      link.href = "/components/footer/footer.css";
-      document.head.appendChild(link);
-
-      // load shared/style.css
-      const link2 = document.createElement("link");
-      link2.rel = "stylesheet";
-      link2.href = "/shared/style.css";
-      document.head.appendChild(link2);
-      //or  method 2 list 
-      ["/components/footer/footer.css", "/shared/style.css"].forEach((href) => {
+    
+      ["../components/footer/footer.css", "../shared/fonts.css"].forEach((href) => {
         const link = document.createElement("link");
         link.rel = "stylesheet";
         link.href = href;
