--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oura Ring. Smart Ring for Fitness, Stress, Sleep & Health.</title>
-  <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
-  <link rel="stylesheet" href="../components/header/header.css">
-  <link rel="stylesheet" href="../shared/fonts.css">
+    <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
     <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="../shared/style.css">
-    <link rel="stylesheet" href="../components/footer/footer.css">
+    <link rel="stylesheet" href="../components/header/header.css">
 </head>
 
 
@@ -106,7 +103,7 @@
                 <div class="person-silhouette">
                     
                     <div class="projection-bg">
-                         <img src="/assets/img/home4.png" alt="person use experience showcase from OURA apps" />
+                         <img src="../assets/img/home4.png" alt="person use experience showcase from OURA apps" />
 
                     </div>
                 </div>
@@ -180,7 +177,7 @@
                     <div class="article-badge">FEATURED ARTICLE</div>
                     <div class="article-image">
                         
-                        <div class="article-overlay">
+                        <div class="article-overlay light-navbar-section">
                             <h3>The Future of Wellness: AI, Privacy, and the OURA Difference</h3>
                             <button class="read-more-btn">Read More →</button>
                         </div>
@@ -213,24 +210,39 @@
 
     </footer>
     <script src="homepage.js"></script>
-    <script>//dynamic load footer to all page if this code
-     fetch('../components/header/header.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('header').innerHTML = data;
+   
+    <script>//load first , but not prior than <head>
+        fetch('../components/header/header.html')
+        .then(res => res.text())
+        .then(data => {
+            document.getElementById('header').innerHTML = data;
 
-        const script = document.createElement('script');
-        script.src = '../components/header/header.js';
-        document.body.appendChild(script);
-      });
-     fetch('/components/footer/footer.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('footer').innerHTML = data;
-        const script = document.createElement('script');
-        script.src = '/components/footer/footer.js';
-        document.body.appendChild(script);
-      });
+            const script = document.createElement('script');
+            script.src = '../components/header/header.js';
+            document.body.appendChild(script);
+        });
+        //dynamic load footer to  page
+        fetch("../components/footer/footer.html")
+            .then((res) => res.text())
+            .then((data) => {
+            document.getElementById("footer").innerHTML = data; 
+            // footer then added footer.js
+            const script = document.createElement("script");
+            script.src = "../components/footer/footer.js";
+            document.body.appendChild(script);
+            });
+
+        // add footer.css if not added in <link header>
+        const link = document.createElement("link");
+        link.rel = "stylesheet";
+        link.href = "../components/footer/footer.css";
+        document.head.appendChild(link);
+
+        const link2 = document.createElement("link");
+        link2.rel = "stylesheet";
+        link2.href = "../shared/fonts.css";
+        document.head.appendChild(link2);
+
     </script>
 
   </body>
