--- a/ForBusiness/ForBusiness.html
+++ b/ForBusiness/ForBusiness.html
@@ -242,18 +242,13 @@
                 <button class="cta-button primary large">GET STARTED TODAY</button>
             </div>
             <div class="cta-image">
-                <video src="../assets/vid/how_it_works_12pm.mp4" autoplay muted loop width="auto"
-                    height="500px"></video>
+                <video src="../assets/vid/how_it_works_12pm.mp4" autoplay muted loop width="89%"
+                    height="50%"></video>
             </div>
         </div>
         <hr />
-        <pre style="
-          color: rgb(148, 126, 93);
-          background-color: #ac9d9d1c;
-          padding: 1rem;
-          border-radius: 10px;
-          font: 1em sans-serif;
-        ">
+        <pre 
+          >
         <strong>
 1 Based on a survey with 699 Oura members after using Oura Ring for 30 days.
   2 https://ouraring.com/blog/how-accurate-is-oura/
