--- a/HowItWorks2/Integrations.html
+++ b/HowItWorks2/Integrations.html
@@ -1,212 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Seamless Integrations with Oura Ring: Boost Your Experience</title>
-  <link rel="icon" type="image/x-icon" href="/assets/images/icon-32x32.png">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Seamless Integrations with Oura Ring: Boost Your Experience</title>  
+  <link rel="icon" type="image/x-icon" href="../assets/images/icon-32x32.png">
   <link rel="stylesheet" href="../components/header/header.css">
+  <link rel="stylesheet" href="../components/footer/footer.css">
+  <link rel="stylesheet" href="../shared/fonts.css">
   <link rel="stylesheet" href="integration.css" />
-      <script src="integration.js"></script>
+  <script src="integration.js"></script>
+</head>
 
-  </head>
+
+<body>
+<header id="header" class="site-header"></header>
   
+  <div class="upgrade-section" class="light-navbar-section">
 
-  <body>
-  <header id="header" class="site-header"></header>
+    <video
+      src="../assets/vid/how_it_works_6pm.mp4"
+      alt="Person after phone"  autoplay muted loop
+      width="100%"      ></video>
+    <div class="upgrade-content">
+      <div class="upgrade-label">OURA INTEGRATIONS</div>
+      <h2>Upgrade your Oura experience</h2>
+      <p>
+        Further tailor Oura to your health goals when you sync the Oura App
+        with the health and wellness apps you already know and trust.
+      </p>
+    </div>
+  </div>
+
+  <div class="container"class="light-navbar-section">
     
-    <div class="upgrade-section" class="light-navbar-section">
-
-      <video
-        src="../assets/vid/how_it_works_6pm.mp4"
-        alt="Person after phone"  autoplay muted loop
-        width="100%"      ></video>
-      <div class="upgrade-content">
-        <div class="upgrade-label">OURA INTEGRATIONS</div>
-        <h2>Upgrade your Oura experience</h2>
-        <p>
-          Further tailor Oura to your health goals when you sync the Oura App
-          with the health and wellness apps you already know and trust.
-        </p>
+    <!-- Favorite Apps Section -->
+    <div id="favorite-apps" class="header">  
+      <h1>Your favorite apps are Build-in, too</h1>
+      <p>
+        Powered by Apple HealthKit and Google Health Connect, the Oura App
+        syncs with hundreds of health and fitness apps to give you a bigger
+        picture of your wellbeing.
+      </p>
+      <pre>
+        <h3>Sync with :&#x2198;</h3>
+      </pre>
+      <br>
+      <div class="icons">
+        <h4>Apple HealthKit</h4>
+        <img class="front" src="../assets/img/applehealth.png" alt="Apple HealthKit"   />
+        <h4>Google Health Connect</h4>
+        <img class="back_with_space"
+          src="../assets/img/gogolehealth-integration1.png"
+          alt="Google Health Connect"
+        />
       </div>
     </div>
 
-    <div class="container"class="light-navbar-section">
-      
-      <!-- Favorite Apps Section -->
-      <div id="favorite-apps" class="header">  
-        <h1>Your favorite apps are Build-in, too</h1>
+
+
+    <div class="apps"class="light-navbar-section">
+      <div class="app-card">
+        <img src="../assets/img/natural-cycles-card_3.png" alt="Headspace"   />
+        <h3>Headspace</h3>
         <p>
-          Powered by Apple HealthKit and Google Health Connect, the Oura App
-          syncs with hundreds of health and fitness apps to give you a bigger
-          picture of your wellbeing.
+          Headspace audio content is featured in the Oura App to help you
+          relax and manage your stress — and see how your body responds.
         </p>
-        <pre>
-          <h3>Sync with :&#x2198;</h3>
-        </pre>
-        <br>
-        <div class="icons">
-          <h4>Apple HealthKit</h4>
-          <img class="front" src="../assets/img/image.png" alt="Apple HealthKit"   height="auto"/>
-          <h4>Google Health Connect</h4>
-          <img class="back_with_space"
-            src="../assets/img/gogolehealth-integration1.png"
-            alt="Google Health Connect"
-          />
-        </div>
+        <a href="#">Read More →</a>
       </div>
-
-
-
-      <div class="apps"class="light-navbar-section">
-        <div class="app-card">
-          <img src="../assets/img/natural-cycles-card_3.png" alt="Headspace"  width="250px" height="300px" />
-          <h3>Headspace</h3>
-          <p>
-            Headspace audio content is featured in the Oura App to help you
-            relax and manage your stress — and see how your body responds.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="app-card">
-          <img src="../assets/img/strava-card_7.png" alt="Strava" />
-          <h3>Strava</h3>
-          <p>
-            By integrating with Strava, you'll get credit for Strava activities
-            in the Oura App and can easily share your Oura workouts with friends
-            in the Strava app.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="app-card">
-          <img src="../assets/img/headspace-card_5.png" alt="Natural Cycles" />
-          <h3>Natural Cycles</h3>
-          <p>
-            Natural Cycles, the first FDA-cleared birth control app, integrates
-            daily temperature trends to predict your fertility status.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-      </div>
-      <div class="powered-by">
-        <p>Powered by Apple HealthKit and Google Health Connect</p>
-      </div>
-
-
-      <!-- Select Integrations Section -->
-      <div id="integrations" class="header">
-        <h1>Available Oura Integrations</h1>
-      </div>
-      <div class="integrations">
-        <div class="integration-card">
-          <img src="../assets/img/myfitness-integration.png" alt="myfitnesspal" />
-          <h3>myfitnesspal</h3>
-          <p>
-            Learn how your eating choices impact your sleep, and vice versa.
-            Track progress toward your nutrition, fitness, and weight loss goals
-            with a deeper understanding of your sleep patterns.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="integration-card">
-          <img src="../assets/img/cronometer-integration.png" alt="Cronometer" />
-          <h3>Cronometer</h3>
-          <p>
-            Get a holistic view of how your unique sleep patterns affect your
-            nutrition choices, activity levels and menstrual cycle.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="integration-card">
-          <img src="../assets/img/zero-intgration.jpeg" alt="Zero" />
-          <h3>Zero</h3>
-          <p>
-            Understand how your sleep affects intermittent fasting, and vice
-            versa.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="integration-card">
-          <img src="../assets/img/apollo-integration.png" alt="Apollo" />
-          <h3>Apollo</h3>
-          <p>
-            Support your sleep and stress-relief with personalized vibration and
-            healing.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="integration-card">
-          <img src="../assets/img/takspace-intefration.png" alt="Talkspace" />
-          <h3>Talkspace</h3>
-          <p>
-            Connect with a mental health professional. At anytime, from
-            anywhere.
-          </p>
-          <a href="#">Read More →</a>
-        </div>
-      </div>
-      <div class="privacy" style="font-size: small ;">
-        <p style="font-weight: bold; font-size: large;">PRIVACY</p>
+      <div class="app-card">
+        <img src="../assets/img/strava-card_7.png" alt="Strava" />
+        <h3>Strava</h3>
         <p>
-          You are in control of your data at all times. You choose who it's
-          shared with, and when.
+          By integrating with Strava, you'll get credit for Strava activities
+          in the Oura App and can easily share your Oura workouts with friends
+          in the Strava app.
         </p>
+        <a href="#">Read More →</a>
       </div>
-      <div class="image-section">
-        <video src="../assets/vid/how_it_works_12pm.mp4"  width="500"  autoplay muted loop style="object-fit: cover;"></video>
-        <div class="text">
-          <h2>Good things come in pairs</h2>
-          <p>
-            In the Oura App, navigate to Integrations to see which apps pair
-            with Oura, including how to set them up step by step.
-          </p>
-          <a href="integration.html" class="download-btn">Download the Oura App</a>
-        </div>
+      <div class="app-card">
+        <img src="../assets/img/headspace-card_5.png" alt="Natural Cycles" />
+        <h3>Natural Cycles</h3>
+        <p>
+          Natural Cycles, the first FDA-cleared birth control app, integrates
+          daily temperature trends to predict your fertility status.
+        </p>
+        <a href="#">Read More →</a>
       </div>
     </div>
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="#favorite-apps">Favorite Apps</a></li>
-          <li><a href="#integrations">Integrations</a></li>
-        </ul>
-      </nav>
+    <div class="powered-by">
+      <p>Powered by Apple HealthKit and Google Health Connect</p>
+    </div>
 
 
-    <footer id="footer" class="light-navbar-section"></footer>
-    <script>//load first , but not prior than <head>
-        fetch('../components/header/header.html')
-        .then(res => res.text())
-        .then(data => {
-            document.getElementById('header').innerHTML = data;
+    <!-- Select Integrations Section -->
+    <div id="integrations" class="header">
+      <h1>Available Oura Integrations</h1>
+    </div>
+    <div class="integrations">
+      <div class="integration-card">
+        <img src="../assets/img/myfitness-integration.png" alt="myfitnesspal" />
+        <h3>myfitnesspal</h3>
+        <p>
+          Learn how your eating choices impact your sleep, and vice versa.
+          Track progress toward your nutrition, fitness, and weight loss goals
+          with a deeper understanding of your sleep patterns.
+        </p>
+        <a href="#">Read More →</a>
+      </div>
+      <div class="integration-card">
+        <img src="../assets/img/cronometer-integration.png" alt="Cronometer" />
+        <h3>Cronometer</h3>
+        <p>
+          Get a holistic view of how your unique sleep patterns affect your
+          nutrition choices, activity levels and menstrual cycle.
+        </p>
+        <a href="#">Read More →</a>
+      </div>
+      <div class="integration-card">
+        <img src="../assets/img/zero-intgration.jpeg" alt="Zero" />
+        <h3>Zero</h3>
+        <p>
+          Understand how your sleep affects intermittent fasting, and vice
+          versa.
+        </p>
+        <a href="#">Read More →</a>
+      </div>
+      <div class="integration-card">
+        <img src="../assets/img/apollo-integration.png" alt="Apollo" />
+        <h3>Apollo</h3>
+        <p>
+          Support your sleep and stress-relief with personalized vibration and
+          healing.
+        </p>
+        <a href="#">Read More →</a>
+      </div>
+      <div class="integration-card">
+        <img src="../assets/img/takspace-intefration.png" alt="Talkspace" />
+        <h3>Talkspace</h3>
+        <p>
+          Connect with a mental health professional. At anytime, from
+          anywhere.
+        </p>
+        <a href="#">Read More →</a>
+      </div>
+    </div>
+    <div class="privacy" style="font-size: small ;">
+      <p style="font-weight: bold; font-size: large;">PRIVACY</p>
+      <p>
+        You are in control of your data at all times. You choose who it's
+        shared with, and when.
+      </p>
+    </div>
+    <div class="image-section">
+      <video src="../assets/vid/how_it_works_12pm.mp4"  width="500"  autoplay muted loop style="object-fit: cover;"></video>
+      <div class="text">
+        <h2>Good things come in pairs</h2>
+        <p>
+          In the Oura App, navigate to Integrations to see which apps pair
+          with Oura, including how to set them up step by step.
+        </p>
+        <a href="../HowItWorks2/Integrations.html" class="download-btn">Download the Oura App</a>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <nav>
+      <ul>
+        <li><a href="#favorite-apps">Favorite Apps</a></li>
+        <li><a href="#integrations">Integrations</a></li>
+      </ul>
+    </nav>
 
-            const script = document.createElement('script');
-            script.src = '../components/header/header.js';
-            document.body.appendChild(script);
-        });
-        //dynamic load footer to  page
-        fetch("../components/footer/footer.html")
-            .then((res) => res.text())
-            .then((data) => {
-            document.getElementById("footer").innerHTML = data; 
-            // footer then added footer.js
-            const script = document.createElement("script");
-            script.src = "../components/footer/footer.js";
-            document.body.appendChild(script);
-            });
 
-        // add footer.css if not added in <link header>
-        const link = document.createElement("link");
-        link.rel = "stylesheet";
-        link.href = "../components/footer/footer.css";
-        document.head.appendChild(link);
+  <footer id="footer" class="light-navbar-section"></footer>
+  <script>//load first , but not prior than <head>
+      fetch('../components/header/header.html')
+      .then(res => res.text())
+      .then(data => {
+          document.getElementById('header').innerHTML = data;
 
-        const link2 = document.createElement("link");
-        link2.rel = "stylesheet";
-        link2.href = "../shared/fonts.css";
-        document.head.appendChild(link2);
+          const script = document.createElement('script');
+          script.src = '../components/header/header.js';
+          document.body.appendChild(script);
+      });
+      //dynamic load footer to  page
+      fetch("../components/footer/footer.html")
+          .then((res) => res.text())
+          .then((data) => {
+          document.getElementById("footer").innerHTML = data; 
+          // footer then added footer.js
+          const script = document.createElement("script");
+          script.src = "../components/footer/footer.js";
+          document.body.appendChild(script);
+          });
 
-    </script>
+      // add footer.css if not added in <link header>
+      const link = document.createElement("link");
+      link.rel = "stylesheet";
+      link.href = "../components/footer/footer.css";
+      document.head.appendChild(link);
+
+      const link2 = document.createElement("link");
+      link2.rel = "stylesheet";
+      link2.href = "../shared/fonts.css";
+      document.head.appendChild(link2);
+
+  </script>
 
   </body>
 </html>
