--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -18,7 +18,7 @@
   
   
     <!-- Hero Section / after header -->
-    <section class="hero" class="section1 light-navbar-section">
+    <section class="hero section1 light-navbar-section">·
         <div class="overlay"></div>
         <div class="bg-elements">
             <div class="bg-circle"></div>
